# Offline-games

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
.claude/skills/cpp-conventions/: SKILL.md
assets/blockfill/: levels.bytes
assets/fonts/: README.md
assets/nibbles/: README.gnome-nibbles  levels.bytes
assets/sokoban/: levels.bytes
scripts/: run-phone-next-workspace.sh
src/: main.cpp
src/core/: App.cpp  App.hpp  Canvas.cpp  Canvas.hpp  Color.hpp  Easing.hpp  FixedTimestep.hpp  FontManager.cpp  FontManager.hpp  GridLayout.hpp  Input.hpp  Layout.hpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  Sdl.hpp  Settings.cpp  Settings.hpp  Theme.cpp  Theme.hpp
src/games/: Difficulty.hpp  GameInfo.hpp  GameRegistry.cpp  GameRegistry.hpp
src/games/blockfill/: BlockFillBoard.cpp  BlockFillBoard.hpp  BlockFillLevels.cpp  BlockFillLevels.hpp  BlockFillScene.cpp  BlockFillScene.hpp
src/games/hexanaut/: BotController.hpp  HexBots.cpp  HexBots.hpp  HexConfig.hpp  HexGrid.cpp  HexGrid.hpp  HexPalette.hpp  HexTypes.hpp  HexWorld.cpp  HexWorld.hpp  HexanautScene.cpp  HexanautScene.hpp
src/games/hole/: HoleConfig.hpp  HoleScene.cpp  HoleScene.hpp  HoleTypes.hpp  HoleWorld.cpp  HoleWorld.hpp
src/games/minesweeper/: MineSweeperBoard.cpp  MineSweeperBoard.hpp  MineSweeperScene.cpp  MineSweeperScene.hpp  MineSweeperSolver.cpp  MineSweeperSolver.hpp
src/games/nibbles/: NibblesLevels.cpp  NibblesLevels.hpp  NibblesScene.cpp  NibblesScene.hpp  NibblesTypes.hpp  NibblesWorld.cpp  NibblesWorld.hpp
src/games/snake/: GhostLeaderboard.cpp  GhostLeaderboard.hpp  SnakeConfig.hpp  SnakePalette.hpp  SnakeScene.cpp  SnakeScene.hpp  SnakeTypes.hpp  SnakeWorld.cpp  SnakeWorld.hpp
src/games/sokoban/: SokobanBoard.cpp  SokobanBoard.hpp  SokobanLevels.cpp  SokobanLevels.hpp  SokobanScene.cpp  SokobanScene.hpp
src/games/tapmatch/: TapMatchBoard.cpp  TapMatchBoard.hpp  TapMatchLevels.cpp  TapMatchLevels.hpp  TapMatchScene.cpp  TapMatchScene.hpp
src/games/tictactoe/: TicTacToeBoard.cpp  TicTacToeBoard.hpp  TicTacToeBot.cpp  TicTacToeBot.hpp  TicTacToeScene.cpp  TicTacToeScene.hpp
src/scenes/: DifficultySelectScene.cpp  DifficultySelectScene.hpp  MenuScene.cpp  MenuScene.hpp  SettingsScene.cpp  SettingsScene.hpp
src/ui/: Button.cpp  Button.hpp  IconButton.cpp  IconButton.hpp  Label.cpp  Label.hpp  ResultOverlay.cpp  ResultOverlay.hpp  Slider.cpp  Slider.hpp  Toggle.cpp  Toggle.hpp
tests/: CMakeLists.txt  test_blockfill.cpp  test_easing.cpp  test_gridlayout.cpp  test_hexanaut.cpp  test_hole.cpp  test_minesweeper.cpp  test_nibbles.cpp  test_settings.cpp  test_snake.cpp  test_sokoban.cpp  test_tapmatch.cpp  test_tapmatch_levels.cpp  test_tictactoe.cpp  test_tictactoe_bot.cpp
tools/: extract_blockfill_levels.py  extract_nibbles_levels.py  extract_sokoban_levels.py
